CS301_Class.cyprj.Archive01-20190825T234813Z-001/CS301_Class.cyprj.Archive01/CS301_Class.cydsn/CortexM3/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 10/19/2019 15:57:01 Project: main.c, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -ffat-lto-objects -c .\main.c -o .\CortexM3\ARM_GCC_493\Debug\main.o
In file included from .\BFS/map_addons.h:52:0,
                 from .\BFS/bfs.h:5,
                 from .\main.c:14:
.\BFS/helper.h:9:0: warning: "TRUE" redefined
 #define TRUE !FALSE
 ^
In file included from .\vars.h:14:0,
                 from .\main.c:13:
.\defines.h:17:0: note: this is the location of the previous definition
 #define TRUE 1
 ^
In file included from .\BFS/map_addons.h:52:0,
                 from .\BFS/bfs.h:5,
                 from .\main.c:14:
.\BFS/helper.h: In function 'blockAndWait':
.\BFS/helper.h:12:10: warning: unused variable 'c' [-Wunused-variable]
     char c = getchar();
          ^
.\BFS/helper.h: At top level:
.\BFS/helper.h:16:7: error: conflicting types for 'itoa'
 char* itoa(int val, int base){
       ^
In file included from c:\program files (x86)\cypress\psoc creator\3.3\psoc creator\import\gnu\arm\4.9.3\arm-none-eabi\include\stdio.h:29:0,
                 from .\main.c:7:
c:\program files (x86)\cypress\psoc creator\3.3\psoc creator\import\gnu\arm\4.9.3\arm-none-eabi\include\stdlib.h:183:8: note: previous declaration of 'itoa' was here
 char * _EXFUN(itoa,(int, char *, int));
        ^
In file included from .\BFS/map_addons.h:52:0,
                 from .\BFS/bfs.h:5,
                 from .\main.c:14:
.\BFS/helper.h: In function 'max':
.\BFS/helper.h:32:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < size; i++){
     ^
.\BFS/helper.h:32:5: note: use option -std=c99, -std=gnu99, -std=c11 or -std=gnu11 to compile your code
.\BFS/helper.h: In function 'reverseRoute':
.\BFS/helper.h:39:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < size/2; i++){
     ^
.\BFS/helper.h: In function 'isRouteEqual':
.\BFS/helper.h:45:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < size; i++){
     ^
In file included from .\BFS/bfs.h:5:0,
                 from .\main.c:14:
.\BFS/map_addons.h: In function 'len':
.\BFS/map_addons.h:59:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < MAX_PATH_LENGTH; i++){
     ^
.\BFS/map_addons.h: In function 'isEmpty':
.\BFS/map_addons.h:68:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0;i<size;i++){
     ^
.\BFS/map_addons.h: In function 'isPointOnPath':
.\BFS/map_addons.h:75:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < size; i++){
     ^
.\BFS/map_addons.h: In function 'printPath':
.\BFS/map_addons.h:83:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < MAX_PATH_LENGTH; i++){
     ^
.\BFS/map_addons.h: In function 'printCommands':
.\BFS/map_addons.h:96:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < MAX_COMMAND_LENGTH; i++){
     ^
.\BFS/map_addons.h: In function 'printMap':
.\BFS/map_addons.h:122:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int m=0;m<MAP_ROW;m++){
     ^
.\BFS/map_addons.h:123:9: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
         for (int n=0;n<MAP_COL;n++){
         ^
.\BFS/map_addons.h: In function 'updateMapWithPath':
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
.\BFS/map_addons.h:162:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 1; i < path_length-1; i++){
     ^
.\BFS/map_addons.h: In function 'convertCoordinatesToCommands':
.\BFS/map_addons.h:195:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < path_length - 1; i++){
     ^
.\BFS/map_addons.h: In function 'getNumOfSurroundingPoints':
.\BFS/map_addons.h:264:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = p.x-1; i < p.x+2; i++){
     ^
.\BFS/map_addons.h:265:9: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
         for (int j = p.y-1; j < p.y+2; j++){
         ^
In file included from .\main.c:14:0:
.\BFS/bfs.h: In function 'BFS':
.\BFS/bfs.h:28:5: warning: missing braces around initializer [-Wmissing-braces]
     point paths[MAX_NUM_PATHS][MAX_PATH_LENGTH] = { 0 };
     ^
.\BFS/bfs.h:28:5: warning: (near initialization for 'paths[0]') [-Wmissing-braces]
.\BFS/bfs.h:29:5: warning: missing braces around initializer [-Wmissing-braces]
     point new_paths[MAX_NUM_PATHS][MAX_PATH_LENGTH] = { 0 };
     ^
.\BFS/bfs.h:29:5: warning: (near initialization for 'new_paths[0]') [-Wmissing-braces]
.\BFS/bfs.h:33:5: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
     for (int i = 0; i < MAX_NUM_PATHS; i++){
     ^
.\BFS/bfs.h:57:9: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
         for (int i = 0; i < MAX_NUM_PATHS; i++){
         ^
.\BFS/bfs.h:107:18: error: redefinition of 'i'
         for (int i = 0; i < MAX_NUM_PATHS; i++){
                  ^
.\BFS/bfs.h:57:18: note: previous definition of 'i' was here
         for (int i = 0; i < MAX_NUM_PATHS; i++){
                  ^
.\BFS/bfs.h:107:9: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
         for (int i = 0; i < MAX_NUM_PATHS; i++){
         ^
.\BFS/bfs.h:116:44: error: invalid type argument of unary '*' (have 'int')
             printf("Number of paths: %d\n",*cnt); // DEBUG
                                            ^
.\main.c: In function 'main':
.\main.c:134:5: warning: statement with no effect [-Wunused-value]
     for (i = 0; i++; i < BFS_ROUTE_SIZE) {
     ^
.\main.c:135:20: error: expected expression before '{' token
         route[i] = {.x=-1, .y=-1};
                    ^
.\main.c:138:29: warning: passing argument 3 of 'BFS' from incompatible pointer type
     BFS(start, destination, &route);
                             ^
In file included from .\main.c:14:0:
.\BFS/bfs.h:26:6: note: expected 'struct point *' but argument is of type 'struct point (*)[68]'
 void BFS(point start, point finish, point * concurrent_path){
      ^
.\main.c:141:34: warning: passing argument 1 of 'convertCoordinatesToCommands' from incompatible pointer type
     convertCoordinatesToCommands(&route, &directions);
                                  ^
In file included from .\BFS/bfs.h:5:0,
                 from .\main.c:14:
.\BFS/map_addons.h:181:6: note: expected 'struct point *' but argument is of type 'struct point (*)[68]'
 void convertCoordinatesToCommands(point * concurrent_path, int *commands){
      ^
.\main.c:141:42: warning: passing argument 2 of 'convertCoordinatesToCommands' from incompatible pointer type
     convertCoordinatesToCommands(&route, &directions);
                                          ^
In file included from .\BFS/bfs.h:5:0,
                 from .\main.c:14:
.\BFS/map_addons.h:181:6: note: expected 'int *' but argument is of type 'int (*)[68]'
 void convertCoordinatesToCommands(point * concurrent_path, int *commands){
      ^
--------------- Rebuild Failed: 10/19/2019 15:57:02 ---------------
